@startuml

title Rental Diagram

package person {
    abstract class Person {
      - String name
    }

    class Tenant {
      + {method} getters and setters
    }

    class Owner {
      + {method} getters and setters
    }

}

package building {
    abstract class Apartment {
      - String unit
      + {method} getters and setters
    }

    class Building {
      - String address
      + {method} getters and setters
    }

    class Studio {
      - String category
      + {method} getters and setters
    }

    class Penthouse {
      - int floorNumber
      + {method} getters and setters
    }
}

Person <|-- Tenant
Person <|-- Owner
Tenant "1" -down- "0..1" Apartment
Owner "1" -right- "*" Apartment
Apartment "*" -right- "1" Building
Studio -up-|> Apartment
Penthouse -up-|> Apartment

@enduml